--- a/ang/src/app/components/presentation-resources/hash-demo/hash-demo.component.html
+++ b/ang/src/app/components/presentation-resources/hash-demo/hash-demo.component.html
@@ -2,7 +2,7 @@
   <br>
   <div class="row text-center">
     <div class="col-12 col-lg-8 mr-auto ml-auto">
-      <h2>Hash Demo</h2>
+      <h2>Hash Demo (SHA256)</h2>
     </div>
   </div>
   <br>
