--- a/ang/src/app/components/blockchain-demo/create-tx/mempool/mempool.component.html
+++ b/ang/src/app/components/blockchain-demo/create-tx/mempool/mempool.component.html
@@ -1,33 +1,33 @@
-
-  <p-carousel numVisible="1" headerText="Incoming Transactions" [value]="items">
-    <ng-template let-item pTemplate="item">
-      <div class="items carou">
-        <div class="ui-grid-row">
-          <h6>Tx Hash</h6> 
-          <div class="ui-grid-col-12 hash">
-            {{item.txhash}}
-          </div>
-        </div>
-        <div class="ui-grid-row">
-          <div class="ui-grid-col-3 inout">
-            <div>
-              <h6>Inputs</h6>
-            </div>
-            <div class="utxo" *ngFor="let input of item.inputs">{{input}}</div>
-          </div>
-          <div class="ui-grid-col-3 inout">
-            <div>
-              <h6>Outputs</h6>
-            </div>
-            <div class="utxo" *ngFor="let output of item.outputs">{{output}}</div>
-          </div>
-          <div class="ui-grid-col-6">
-            <button type="button" class="btn btn-sm btn-primary txButton ml-auto">Accept</button>
-            <button type="button" class="btn btn-sm btn-primary txButton mr-auto">Reject</button>
-          </div>
-        </div>
+<div class="row"><div class="col-12">
+  <h4>Incoming Transactions</h4>
+</div></div>
+<div class="row d-inline" *ngFor="let tx of txs; let i=index;">
+  <div class="col-12">
+    <div class="row">
+      <h6>Tx Hash</h6>
+      <div class="col-12 hash">
+        {{tx.tx_hash}}
       </div>
-    </ng-template>
-  </p-carousel>
-
-
+    </div>
+    <div class="row">
+      <div class="col-3 inout">
+        <div>
+          <h6>Inputs</h6>
+        </div>
+        <h4 *ngIf="tx.inputs.length === 0">Inputs Loading...</h4>
+        <div class="utxo" *ngFor="let input of tx.inputs">{{input.value}}</div>
+      </div>
+      <div class="col-3 inout">
+        <div>
+          <h6>Outputs</h6>
+        </div>
+        <h4 *ngIf="tx.outputs.length === 0">Outputs Loading...</h4>
+        <div class="utxo" *ngFor="let output of tx.outputs">{{output.value}}</div>
+      </div>
+      <div class="col-6">
+        <button type="button" class="btn btn-sm btn-primary txButton ml-auto" (click)="accept(i)">Accept</button>
+        <button type="button" class="btn btn-sm btn-primary txButton mr-auto" (click)="reject(i)">Reject</button>
+      </div>
+    </div>
+  </div>
+</div>
