--- a/ang/src/app/components/blockchain-demo/create-tx/create-tx.component.html
+++ b/ang/src/app/components/blockchain-demo/create-tx/create-tx.component.html
@@ -50,8 +50,8 @@
     <div class="col-lg-8 col-12">
       <div class="row">
         <div class="col-12 shadowBoxLight" pDroppable="selUtxos" (onDrop)="dropSel($event)">
-          <h4>UTXO Set <button class="btn btn-primary btn-sm d-inline" (click)="updateUtxos()">Update UTXO Set</button></h4>
-          <div *ngIf="utxos.length === 0" class="helper-text">There are no more UTXOs in the UTXO set!</div>
+          <h4>UTXO Set</h4>
+          <div *ngIf="utxos.length === 0" class="helper-text">There are no UTXOs in the UTXO set! <a style="text-decoration: underline;" routerLink="/blockchain-demo/create-block">Create a Genesis Block first!</a></div>
           <div *ngFor="let utxo of utxos" class="utxo" [ngClass]="{'my-utxo': utxo.current_owner === user.id }"
             pDraggable="utxos" (onDragStart)="dragStart($event, utxo)" (onDragEnd)="dragEnd($event)">
             {{utxo.value.toFixed(1)}}
