--- a/ang/src/app/components/blockchain-demo/blockchain/blockchain.component.html
+++ b/ang/src/app/components/blockchain-demo/blockchain/blockchain.component.html
@@ -1,4 +1,5 @@
 <div class="blockchain">
+  <h1 *ngIf="blocks.length === 0">There are no blocks in the blockchain.  <a style="text-decoration: underline;" routerLink="/blockchain-demo/create-block">Mine the Genesis Block now!</a></h1>
   <div class="shadowBox block" *ngFor="let block of blocks">
     <h2 *ngIf="block.blockHeight > 0" class="text-primary d-inline">Block #{{ block.blockHeight }}</h2>
     <h2 *ngIf="block.blockHeight === 0" class="text-primary d-inline">Genesis Block</h2>
