--- a/ang/src/app/components/glossary/glossary.component.html
+++ b/ang/src/app/components/glossary/glossary.component.html
@@ -1,16 +1,27 @@
 <br>
-<div class="container">
+<div class="container-fluid">
   <div class="row text-center">
-    <div class="col-12">
-        <h2>Blockchain Terms by Chainworks</h2>
-        <p>Hover over term to see definition</p>
+    <div class="col-12 text-primary">
+      <h2>Blockchain Terms by Chainworks</h2>
+      <p>Click on each term to show definition</p>
     </div>
   </div>
   <br>
-  <div class="row" >
-    <div class="col-3 text-center terms-grid" *ngFor="let term of terms">
-      <div class="inner-box" placement="bottom" ngbTooltip="{{ term.definition }}">
-          <div class="term-text">{{term.term}}</div>
+  <div class="row">
+    <div class="col-12 mr-auto ml-auto text-center">
+      <div class="btn-group text-center " *ngFor="let term of terms; let i = index;">
+        <button class="btn btn-primary" style="margin: 15px;" (click)="open(content)">{{ term.term }}</button>
+        <ng-template #content let-c="close" let-d="dismiss">
+          <div class="modal-header">
+            <h4 class="modal-title">{{term.term}}</h4>
+            <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>{{ term.definition }}</p>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
