--- a/ang/src/app/components/navbar/navbar.component.html
+++ b/ang/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a routerLink="/glossary" routerLinkActive="active" class="nav-link">Glossary</a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/faq" routerLinkActive="active" class="nav-link">FAQ</a>
+        </li>
         <li *ngIf="authService.loggedIn()" class="nav-item" ngbDropdown placement="bottom-right">
           <a id="presentation-resources" class="nav-link dd" ngbDropdownToggle>Presentation Resources</a>
           <div ngbDropdownMenu aria-labelledby="presentation-resources">
