--- a/ang/src/app/components/user/register/register.component.html
+++ b/ang/src/app/components/user/register/register.component.html
@@ -29,9 +29,11 @@
         <div class="form-group">
           <label for="session">Training Session Id</label>
           <input type="text" class="form-control" name="session" ngModel>
+          <p *ngIf="sessionError" class="helper-text" style="color:red;">Please enter a valid training session ID</p>
         </div>
         <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
       </form>
     </div>
   </div>
+  <br><br>
 </div>
